tests/reference/asr-structs_02-f95782c.stderr
semantic error: S not supported yet in Attribute.
 --> tests/errors/structs_02.py:9:5
  |
9 |     s.x = 2
  |     ^^^ 
